# Autonomous_repo

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/turtle_control_pkg/include/turtle_control_pkg/turtle_control_pkg/msg/: num.h  num.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h
install/turtle_control_pkg/include/turtle_control_pkg/turtle_control_pkg/msg/detail/: num__builder.hpp  num__description.c  num__functions.c  num__functions.h  num__rosidl_typesupport_fastrtps_c.h  num__rosidl_typesupport_fastrtps_cpp.hpp  num__rosidl_typesupport_introspection_c.h  num__rosidl_typesupport_introspection_cpp.hpp  num__struct.hpp  num__traits.hpp  num__type_support.c  num__type_support.h  num__type_support.hpp  sphere__description.c  sphere__functions.h  sphere__struct.hpp  (+6 more)
install/turtle_control_pkg/lib/turtle_control_pkg/: simple_publisher.py  simple_subscriber.py  turtle_control  turtle_control.py
install/turtle_control_pkg/share/turtle_control_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtle_control_pkg/share/turtle_control_pkg/cmake/: ament_cmake_export_include_directories-extras.cmake  export_turtle_control_pkg__rosidl_generator_cExport-noconfig.cmake  export_turtle_control_pkg__rosidl_generator_cExport.cmake  export_turtle_control_pkg__rosidl_generator_pyExport-noconfig.cmake  export_turtle_control_pkg__rosidl_generator_pyExport.cmake  export_turtle_control_pkg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_turtle_control_pkg__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  turtle_control_pkgConfig.cmake  turtle_control_pkg__rosidl_typesupport_cExport-noconfig.cmake  turtle_control_pkg__rosidl_typesupport_cExport.cmake  turtle_control_pkg__rosidl_typesupport_cppExport-noconfig.cmake  turtle_control_pkg__rosidl_typesupport_cppExport.cmake  turtle_control_pkg__rosidl_typesupport_introspection_cExport.cmake
install/turtle_control_pkg/share/turtle_control_pkg/msg/: Num.idl  Num.json  Sphere.json
install/turtle_control_pkg/share/turtle_control_pkg/srv/: AddThreeInts.json
log/: latest_build
src/turtle_control_pkg/: CMakeLists.txt  package.xml  setup.py
src/turtle_control_pkg/bag_files/rosbag2_2025_10_19-00_24_45/: metadata.yaml  rosbag2_2025_10_19-00_24_45_0.mcap
src/turtle_control_pkg/launch/: simulation.launch.py  turtle_control_launch.xml
src/turtle_control_pkg/rviz/: simulation.rviz
src/turtle_control_pkg/turtle_control_pkg/: __init__.py  client_example.py  fibonacci_action_client.py  fibonacci_action_server.py  server_example.py  teleop.py
src/turtle_control_pkg/urdf/: robot.urdf
src/turtle_control_pkg/worlds/: building_robot.sdf
(+8 files in other folders)
